--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      thanks to my heros at yayquery.com :-)
 -->
 <body>
-	<a href="http://github.com">
+	<a href="http://github.com/MartinMa/Blip-Stats">
 		<img style="position: absolute; top: 0pt; right: 0pt; border: 0pt none;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork the shit outta this repo">
 	</a>
 	<div class="content">
