graph sounds better

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="content">
 		<div class="box">
 			<div id="title"><h1>Blip Stats</h1><h4>&nbsp;v0.1</h4></div>
-			<p>You know you are a <a href="http://Blip.fm">Blip.fm</a> crackhead, but now you can have proof in the form of a spiffy line chart. <br />
+			<p>You know you are a <a href="http://Blip.fm">Blip.fm</a> crackhead, but now you can have proof in the form of a spiffy line graph. <br />
 			Please type in a Blip.fm username and hit Enter.
 			</p>
 			<form action="javascript:;" id="makeitso">
