small change of text

--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
 	</a>
 	<div class="content">
 		<div class="box">
-			<div id="title"><h1>Blip.fm Playlists</h1><h4>&nbsp;</h4></div>
+			<div id="title"><h1>Blip Playlists</h1><h4>&nbsp;</h4></div>
 			<p>To get a sorted listing of a <a href="http://Blip.fm">Blip.fm</a> Playlist, please provide a username.</p>
 			<form action="javascript:;" id="makeitso">
 				<div class="form">
